--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,4 @@
+# mobile_app
 mobile_app/node_modules/**/*
 .expo/*
 npm-debug.*
@@ -9,12 +10,11 @@ npm-debug.*
 *.orig.*
 web-build/
 
+# api
+api/venv/**/*
+api/.vscode/**/*
+api/__pycache__
+api.log
+
 # macOS
 .DS_Store
-
-# macOS Folder Icon
-# This breaks sometimes. If Icon tries to sneak its way 
-# back into the repo, delete the following lines and run
-# this command to add the proper characters to this file:
-#   printf "Icon[\r]" >> .gitignore
-Icon[]
